Gemaakt met Colaboratory

--- a/Week_2_PRA3024_Particle_physics.ipynb
+++ b/Week_2_PRA3024_Particle_physics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nwEB_iQ88S1oJqEMsXVAOvHJeXYcdQbK",
-      "authorship_tag": "ABX9TyNAcXrwPaAZ42HZBItCPOFc",
+      "authorship_tag": "ABX9TyPXdXrlH01Cn17DLN7sk9Sz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is my submission for the first graded assignment of PRA3024, the particle physics assignment of week 2. \n",
-        "Made by: Lisa van Eijk\n",
-        "Course: PRA3024"
+        "This file and the ones uploaded before this one are not yet the final file for submission for week 2 (they are just tests for using github and saving my progress with the code). The real submission will, instead of saying 'Gemaakt met colaboratory' say 'Submission week 2 PRA3024 Particle physics'. "
       ],
       "metadata": {
         "id": "3q3OBXjhm0dN"
